apps/quickwit/quickwit-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quickwit
  namespace: quickwit-system
spec:
  selector:
    app: quickwit
  ports:
  - name: http
    port: 7280
    targetPort: 7280
  - name: grpc-otel
    port: 7281
    targetPort: 7281
  type: LoadBalancer
